feat: add footer

--- a/index.html
+++ b/index.html
@@ -9,11 +9,22 @@
   <body>
     <header>
       <form id="form">
-        <input type="text" id="search" class="search" placeholder="Search">
+        <input type="text" id="search" class="search" placeholder="Search" autocomplete="off" autofocus>
       </form>
     </header>
     <main id="main">
     </main>
+    <footer>
+        <div class="age">
+            <p>©</p>
+            <p class="text">2022</p>
+            <a href="https://github.com/w0pro">Github</a>
+        </div>
+        <div class="link">
+            <a class="rss" href="https://rs.school/js-stage0/"></a>
+        </div>
+    </footer>
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
