feat: add reset info on search

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <header>
       <form id="form">
-        <input type="text" id="search" class="search" placeholder="Search" autocomplete="off" autofocus>
+        <input type="text" id="search" class="search" placeholder="Search" autocomplete="off">
+        <span class="close" onclick="this.previousElementSibling.value = ''">&times;</span>
       </form>
     </header>
     <main id="main">
